# sts_bot

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  pyproject.toml
glue/: bg_ids.json  commod_bridge.py  pyproject.toml  translator.py  tui.py
mcts/: Cargo.toml
mcts/src/: lib.rs  tictactoe.rs
scripts/: launch_modded_game.sh
simulator/: Cargo.toml  pyproject.toml
simulator/src/: action.rs  card_db.rs  dungeon.rs  effects.rs  encounter_db.rs  event_db.rs  lib.rs  map.rs  mcts_adapter.rs  monster_db.rs  pool.rs  pools.json  pools.rs  potion_db.rs  power_db.rs  py.rs  relic_db.rs  reward_deck.rs  rng.rs  screen.rs  state.rs  types.rs
simulator/tests/: apply_boss_relic.rs  apply_card_reward.rs  apply_grid.rs  apply_map.rs  apply_neow.rs  apply_rest.rs  apply_reward_pools.rs  apply_shop.rs  combat.rs  combat_effects.rs  combat_lifecycle.rs  combat_over_loop.rs  determinize.rs  determinize_neow.rs  live_neow_remove.rs  replay_seed.rs  round_trip.rs  validate_against_translator.rs
simulator/tests/fixtures/: combat.json  combat_multi_monster.json  map.json  neow.json  neow_remove_after.json  neow_remove_confirmed.json  neow_remove_grid.json
simulator/tests/fixtures/run/: 000_map.json  001_combat.json
training/: pyproject.toml
training/tests/: test_featurize.py  test_state_encoder.py
training/training/: model.py  replay_buffer.py  train.py
tui/: Cargo.toml  build.rs
tui/src/: main.rs  model_eval.rs
