[package]
name = "sts_simulator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]
