[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sts-training"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sts_simulator",
    "torch",
    "numpy",
    "tqdm>=4.67.3",
    "msgspec>=0.21.0",
    "tensorboard>=2.18",
]


[tool.hatch.build.targets.wheel]
packages = ["training"]

[project.scripts]
sts-train = "training.train:main"

[tool.uv.sources]
sts_simulator = { workspace = true }
